infra/k8s/comments.depl.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: shahid78600/comments
---

apiVersion: v1 
kind: Service 
metadata:
  name: comment-srv
spec: 
  selector:
    app: comments
  type: ClusterIP
  ports:
    - name: comments
      protocol: TCP
      port: 8002
      targetPort: 8002
