infra/k8s/post-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: post-srv
  namespace: default
spec:
  selector:
    app: posts
  type: NodePort
  ports:
  - name: posts
    protocol: TCP
    port: 8001
    targetPort: 8001
