infra/k8s/query.depl.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: shahid78600/query
---

apiVersion: v1 
kind: Service 
metadata:
  name: query-srv
spec: 
  selector:
    app: query
  type: ClusterIP
  ports:
    - name: query
      protocol: TCP
      port: 8003
      targetPort: 8003
