infra/k8s/ingress-srv.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: posts.com
    http:
      paths:
      - path: /posts/create
        pathType: Prefix
        backend:
          service:
            name: post-clusterip-srv
            port:
              number: 8001
      - path: /posts
        pathType: Prefix
        backend:
          service:
            name: query-srv
            port:
              number: 8003
      - path: /posts/?(.*)/comments
        pathType: Prefix
        backend:
          service:
            name: comment-srv
            port:
              number: 8002
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: client-srv
            port:
              number: 3000
